PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/Auto__c.field-meta.xml
<CustomField>
    <fullName>Auto__c</fullName>
    <label>사번(Auto)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>