PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>생년월일</label>
    <type>Date</type>
</CustomField>