PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/Clear__c.field-meta.xml
<CustomField>
    <fullName>Clear__c</fullName>
    <label>금품청산 등</label>
    <length>255</length>
    <type>Text</type>
</CustomField>