PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/DeptPosition__c.field-meta.xml
<CustomField>
    <fullName>DeptPosition__c</fullName>
    <label>직책</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chairman</fullName>
                <label>총괄사장</label>
            </value>
            <value>
                <fullName>CEO</fullName>
                <label>대표이사</label>
            </value>
            <value>
                <fullName>부사장</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
                <label>본부장</label>
            </value>
            <value>
                <fullName>Department Head</fullName>
                <label>부서장</label>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Business Architecture</fullName>
                <label>Business Architect</label>
            </value>
            <value>
                <fullName>Platform Architecture</fullName>
                <label>Platform Architect</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Mgmt Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>