PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/DischargeDate__c.field-meta.xml
<CustomField>
    <fullName>DischargeDate__c</fullName>
    <label>전역일</label>
    <type>Date</type>
</CustomField>