PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Org ID(회사 이메일 주소). 외주인력의 경우 개인 또는 소속회사 이메일 주소 입력</inlineHelpText>
    <label>회사 이메일</label>
    <type>Email</type>
</CustomField>