PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <inlineHelpText>응급상황 시 연락가능한 전화번호</inlineHelpText>
    <label>비상연락번호</label>
    <type>Phone</type>
</CustomField>