PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/EmployeeNo__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNo__c</fullName>
    <label>사번</label>
    <length>30</length>
    <type>Text</type>
</CustomField>