PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <description>DU+입사연도+일련번호3자리</description>
    <displayFormat>DU{YY}{000}</displayFormat>
    <inlineHelpText>자동부여(DU+입사연도+일변번호3자리)</inlineHelpText>
    <label>사번(Internal)</label>
    <type>AutoNumber</type>
</CustomField>