PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/EmployeeOSNo__c.field-meta.xml
<CustomField>
    <fullName>EmployeeOSNo__c</fullName>
    <description>외주인력 사번</description>
    <displayFormat>OS{YY}{000}</displayFormat>
    <label>사번(External)</label>
    <type>AutoNumber</type>
</CustomField>