PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/fm_EmployeeNo__c.field-meta.xml
<CustomField>
    <fullName>fm_EmployeeNo__c</fullName>
    <formula>IF( TEXT(Type__c) = &apos;내부직원&apos;, 
&quot;D&quot;&amp;&quot;U&quot;&amp;MID(TEXT(JoinDate__c),3,2)&amp;RIGHT(Auto__c,3),
&quot;O&quot;&amp;&quot;S&quot;&amp;MID(TEXT(YEAR(DATEVALUE(CreatedDate))),3,2)&amp;RIGHT(Auto__c,3)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>사번(사용X)</label>
    <type>Text</type>
</CustomField>