PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/Fm_Level__c.field-meta.xml
<CustomField>
    <fullName>Fm_Level__c</fullName>
    <formula>IF(
	VALUE(TEXT(Position__c)) &gt;= 8
	, $Setup.QuoteItemManage__c.Level1__c 
	, IF(VALUE(TEXT(Position__c)) &gt;= 6 
		, $Setup.QuoteItemManage__c.Level2__c
		, $Setup.QuoteItemManage__c.Level3__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fm_Level</label>
    <type>Text</type>
</CustomField>