PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/fm_Position__c.field-meta.xml
<CustomField>
    <fullName>fm_Position__c</fullName>
    <formula>CASE(Position__c, 
&quot;0&quot;,&quot;총괄사장&quot;,
&quot;1&quot;, &quot;대표이사&quot;,
&quot;2&quot;, &quot;전무&quot;,
&quot;3&quot;, &quot;상무&quot;,
&quot;4&quot;, &quot;이사&quot;,
&quot;5&quot;, &quot;부장&quot;,
&quot;6&quot;, &quot;차장&quot;, 
&quot;7&quot;, &quot;과장&quot;, 
&quot;8&quot;, &quot;대리&quot;, 
&quot;9&quot;, &quot;사원&quot;,
&quot;10&quot;, &quot;부사장&quot;,
&quot;11&quot;, &quot;감사&quot;, 
&quot;12&quot;, &quot;센터장&quot;,
&quot;13&quot;,&quot;인턴&quot;,
&quot;14&quot;,&quot;사원(수습)&quot;,
&quot;15&quot;,&quot;수석&quot;,
&quot;16&quot;,&quot;책임&quot;,
&quot;17&quot;,&quot;선임&quot;,
&quot;18&quot;,&quot;선임(수습)&quot;,
&quot;&quot;)</formula>
    <label>직급</label>
    <type>Text</type>
</CustomField>