PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/MilitaryTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>MilitaryTypeDescription__c</fullName>
    <label>미필사유</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>