PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/NTISRegisterID__c.field-meta.xml
<CustomField>
    <fullName>NTISRegisterID__c</fullName>
    <description>과학기술인등록번호는 국가연구개발에 참여하는 연구자의 개인 정보를 보호하기 위해 사용하는 주민등록번호를 대신하는 번호입니다.</description>
    <label>과학기술인등록번호</label>
    <length>8</length>
    <type>Text</type>
</CustomField>