PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/O_Certification__c.field-meta.xml
<CustomField>
    <fullName>O_Certification__c</fullName>
    <label>Certification 보유</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Advanced Admin</fullName>
            </value>
            <value>
                <fullName>Develop 1</fullName>
            </value>
            <value>
                <fullName>Develop 2</fullName>
            </value>
            <value>
                <fullName>Marketing Related</fullName>
            </value>
            <value>
                <fullName>Sales Consultant</fullName>
            </value>
            <value>
                <fullName>Service Consultant</fullName>
            </value>
            <value>
                <fullName>Field Service Consultant</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
            <value>
                <fullName>Application Architect</fullName>
            </value>
            <value>
                <fullName>Program Architect</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>