PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/O_Company__c.field-meta.xml
<CustomField>
    <fullName>O_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>외주계약사</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employee</relationshipLabel>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>