PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/O_TRAINING_E__c.field-meta.xml
<CustomField>
    <fullName>O_TRAINING_E__c</fullName>
    <label>교육참여기간 종료</label>
    <type>Date</type>
</CustomField>