PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>직급</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>총괄사장</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>대표이사</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>센터장</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>감사</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>부사장</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>전무</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>상무</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>수석</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>이사</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>부장</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>책임</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>차장</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>과장</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>대리</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>선임</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>선임(수습)</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>사원</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>사원(수습)</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>인턴</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>