PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>사유</label>
    <length>50</length>
    <type>Text</type>
</CustomField>