PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>비고</label>
    <length>255</length>
    <type>Text</type>
</CustomField>