PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/fields/WORK_TYPE__c.field-meta.xml
<CustomField>
    <fullName>WORK_TYPE__c</fullName>
    <label>고용형태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>정규직</fullName>
            </value>
            <value>
                <fullName>계약직</fullName>
            </value>
            <value>
                <fullName>인턴</fullName>
            </value>
            <value>
                <fullName>외주인력</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>