PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/validationRules/Military_Service_exemption_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Military_Service_exemption_Reason</fullName>
    <active>true</active>
    <description>병역구분이 미필, 면제 일경우 반드시 미필사유를 작성해야함</description>
    <errorConditionFormula>IF(
				AND(
				OR(
								ISPICKVAL(MilitaryServiceDiv__c, &apos;미필&apos;),
								ISPICKVAL(MilitaryServiceDiv__c, &apos;면제&apos;)
								),
				 LEN(MilitaryTypeDescription__c)=0
				),
				TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>MilitaryTypeDescription__c</errorDisplayField>
    <errorMessage>미필 혹은 면제사유를 작성하세요.</errorMessage>
</ValidationRule>