PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>EmployeeNo__c</columns>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Position__c</columns>
    <columns>MainRole__c</columns>
    <columns>ExitDate__c</columns>
    <columns>DeptPosition__c</columns>
    <columns>MentorUser__c</columns>
    <columns>JoinDate__c</columns>
    <columns>WorkPeriode__c</columns>
    <columns>Email__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>Birthday__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>