PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/listViews/External.listView-meta.xml
<ListView>
    <fullName>External</fullName>
    <columns>EmployeeNo__c</columns>
    <columns>NAME</columns>
    <columns>O_Company__c</columns>
    <columns>Gender__c</columns>
    <columns>O_Area__c</columns>
    <columns>fm_Position__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>Private_Email__c</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>외부직원</value>
    </filters>
    <label>외주인력</label>
</ListView>