PA_Education/TestMenifest/force-app/main/default/objects/Employee__c/listViews/resign.listView-meta.xml
<ListView>
    <fullName>resign</fullName>
    <columns>EmployeeNo__c</columns>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Position__c</columns>
    <columns>MainRole__c</columns>
    <columns>DeptPosition__c</columns>
    <columns>JoinDate__c</columns>
    <columns>WorkPeriode__c</columns>
    <columns>Email__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>Birthday__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>퇴사자목록</label>
</ListView>